added players name

--- a/index.html
+++ b/index.html
@@ -13,58 +13,219 @@
 		<!--Div que contiene Efecto de Escritura de TEXTO-->
 		<div id="div-Typed">  
         	<h1><span class="typed"></span></h1>
-      	</div>
-
-      	<br>
+      	</div>    	
 
 		<!-- Swiper -->
 		<div class="swiper-container">
 		    <div class="swiper-wrapper">
 		    	<!-- <div class="swiper-slide"> <img src="resources/images-players/1-MichaelJordan-removebg-preview.png"></div>
 		    	<div class="swiper-slide"> <img src="resources/images-players/2-MagicJohnson-removebg-preview.png"></div> -->
-			    <div class="swiper-slide"> <img src="resources/images-players/KobeBryant.png"> </div>			    
-			    <div class="swiper-slide"> <img src="resources/images-players/ShaquilleO'Neal.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/AlHorford.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/AnthonyDavis.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/BenSimmons.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/BlakeGriffin.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/CarmeloAnthony.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/ChrisPaul.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/DamianLillard.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/DerrickRose.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/DirkNowitzki.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/DwightHoward.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/DwyaneWade.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/GiannisAntetokounmpo.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/JamesHarden.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/JoelEmbiid.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/JohnWall.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KawhiLeonard.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KevinDurant.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KevinGarnett.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KevinLve.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KlayThompson.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KobeBryant.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KristapsPorzingis.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/KyrieIrving.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/LeBronJames.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/LukaDoncic.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/ManuGinobili.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/MarcGasol.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/NikolaJokic.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/PauGasol.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/PaulGeorge.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/PaulPierce.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/RagonRondon.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/RayAllen.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/RickyRubio.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/RussellWestbrook.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/SergeIbaka.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/StephenCurry.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/TimDunca.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/TonyParker.png"> </div>
-			    <div class="swiper-slide"> <img src="resources/images-players/VictorOladipo.png"> </div>
+
+			    <div class="swiper-slide"> 
+			    	<div> <p>Kobe Bryant</p> </div>
+			    	<img src="resources/images-players/KobeBryant.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Tim Dunca</p> </div>
+			    	<img src="resources/images-players/TimDunca.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Shaquille O'Neal</p> </div>			    	
+			    	<img src="resources/images-players/ShaquilleO'Neal.png"> 
+			    </div>
+
+			    <div class="swiper-slide"> 
+			    	<div> <p>Al Horford</p> </div>
+			    	<img src="resources/images-players/AlHorford.png"> 
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Anthony Davis</p> </div>
+			    	<img src="resources/images-players/AnthonyDavis.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Ben Simmons</p> </div>
+			    	<img src="resources/images-players/BenSimmons.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Blake Griffin</p> </div>
+			    	<img src="resources/images-players/BlakeGriffin.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Carmelo Anthony</p> </div>
+			    	<img src="resources/images-players/CarmeloAnthony.png">
+			    </div>
+
+			    <div class="swiper-slide"> 
+			    	<div> <p>Chris Paul</p> </div>
+			    	<img src="resources/images-players/ChrisPaul.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Damian Lillard</p> </div>
+			    	<img src="resources/images-players/DamianLillard.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Derrick Rose</p> </div>
+			    	<img src="resources/images-players/DerrickRose.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Dirk Nowitzki</p> </div>
+			    	<img src="resources/images-players/DirkNowitzki.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Dwight Howard</p> </div>
+			    	<img src="resources/images-players/DwightHoward.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Dwyane Wade</p> </div>
+			    	<img src="resources/images-players/DwyaneWade.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Giannis Antetokounmpo</p> </div>
+			    	<img src="resources/images-players/GiannisAntetokounmpo.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>James Harden</p> </div>
+			    	<img src="resources/images-players/JamesHarden.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Joel Embiid</p> </div>
+			    	<img src="resources/images-players/JoelEmbiid.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>John Wall</p> </div>
+			    	<img src="resources/images-players/JohnWall.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Kawhi Leonard</p> </div>
+			    	<img src="resources/images-players/KawhiLeonard.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Kevin Durant</p> </div>
+			    	<img src="resources/images-players/KevinDurant.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Kevin Garnett</p> </div>
+			    	<img src="resources/images-players/KevinGarnett.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Kevin Love</p> </div>
+			    	<img src="resources/images-players/KevinLve.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Klay Thompson</p> </div>
+			    	<img src="resources/images-players/KlayThompson.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Kristaps Porzingis</p> </div>
+			    	<img src="resources/images-players/KristapsPorzingis.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Kyrie Irving</p> </div>
+			    	<img src="resources/images-players/KyrieIrving.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>LeBron James</p> </div>
+			    	<img src="resources/images-players/LeBronJames.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Luka Doncic</p> </div>
+			    	<img src="resources/images-players/LukaDoncic.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Manu Ginobili</p> </div>
+			    	<img src="resources/images-players/ManuGinobili.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Marc Gasol</p> </div>
+			    	<img src="resources/images-players/MarcGasol.png">
+			    </div>
+
+			     <div class="swiper-slide">
+			    	<div> <p>Pau Gasol</p> </div>
+			    	<img src="resources/images-players/PauGasol.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Nikola Jokic</p> </div>
+			    	<img src="resources/images-players/NikolaJokic.png">
+			    </div>
 			    
+			    <div class="swiper-slide">
+			    	<div> <p>Paul George</p> </div>
+			    	<img src="resources/images-players/PaulGeorge.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Paul Pierce</p> </div>
+			    	<img src="resources/images-players/PaulPierce.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Ragon Rondon</p> </div>
+			    	<img src="resources/images-players/RagonRondon.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Ray Allen</p> </div>
+			    	<img src="resources/images-players/RayAllen.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Ricky Rubio</p> </div>
+			    	<img src="resources/images-players/RickyRubio.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Russell Westbrook</p> </div>
+			    	<img src="resources/images-players/RussellWestbrook.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Serge Ibaka</p> </div>
+			    	<img src="resources/images-players/SergeIbaka.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Stephen Curry</p> </div>
+			    	<img src="resources/images-players/StephenCurry.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Tony Parker</p> </div>
+			    	<img src="resources/images-players/TonyParker.png">
+			    </div>
+
+			    <div class="swiper-slide">
+			    	<div> <p>Victor Oladipo</p> </div>
+			    	<img src="resources/images-players/VictorOladipo.png">
+			    </div>
+
 			</div>			
 		</div>
 
