added players: Jordan and Magic

--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
 		<!-- Swiper -->
 		<div class="swiper-container">
 		    <div class="swiper-wrapper">
-		    	<!-- <div class="swiper-slide"> <img src="resources/images-players/1-MichaelJordan-removebg-preview.png"></div>
-		    	<div class="swiper-slide"> <img src="resources/images-players/2-MagicJohnson-removebg-preview.png"></div> -->
+
+		    	<div class="swiper-slide">
+		    		<div> <p>Magic Johnson</p> </div>
+		    		<img src="resources/images-players/MagicJohnson.png">
+		    	</div>
+
+		    	<div class="swiper-slide">
+		    		<div> <p>Michael Jordan</p> </div>
+		    		<img src="resources/images-players/MichaelJordan.png">
+		    	</div>
 
 			    <div class="swiper-slide"> 
 			    	<div> <p>Kobe Bryant</p> </div>
@@ -175,7 +183,7 @@
 			    	<div> <p>Nikola Jokic</p> </div>
 			    	<img src="resources/images-players/NikolaJokic.png">
 			    </div>
-			    
+
 			    <div class="swiper-slide">
 			    	<div> <p>Paul George</p> </div>
 			    	<img src="resources/images-players/PaulGeorge.png">
