--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title> 3D Responsible Slider </title>
 		<!-- Libreria Swiper  -->
-		<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 		<!-- Css  -->
 		<link rel="stylesheet" type="text/css" href="style.css">	
 	</head>
@@ -238,7 +238,7 @@
 		</div>
 
 		<!-- JavaScript Swiper -->
-		<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>		
+		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>		
 		<!-- JavaScript Typed -- Writing Effect -->
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 		<script src="js.js"></script>
